Bug 712836. Make MediaResources which have ended abnormally ineligible for cloning. r=cpearce